<resources>
    <string name="app_name">BlackPapers</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_about">BlackPapers</string>
    <string name="title_activity_admob_test">AdmobTest</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="blackwater">BlackWater</string>
    <string name="byBlackwater">by Blackwater</string>
    <string name="app">App</string>
    <string name="selections">Selections</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="admin_panel">Admin panel</string>
    <string name="upload">Upload</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="launch_firebase">Firebase console</string>
    <string name="developer_name">Yağız Şimşek</string>
    <string name="oss">Open Source Licenses</string>
    <string name="follow_us">Follow us</string>
    <string name="browse">Browse</string>
    <string name="change_log">Change log</string>
    <string name="popular">Popular</string>
    <string name="popular_collections">Popular collections</string>
    <string name="categories">Categories</string>
    <string name="hot">Hot</string>
    <string name="new_added">Added recently</string>

</resources>
