<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.AppFragment">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <RelativeLayout
                    android:id="@+id/relative_header"
                    android:layout_width="match_parent"
                    android:layout_height="192dp"
                    android:background="@color/colorPrimaryDark">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="13dp"
                        android:layout_toEndOf="@+id/imageView2"
                        android:text="Version 0.5 STABLE"
                        android:textStyle="italic" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="12dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginBottom="0dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="6dp"
                        android:layout_marginBottom="32dp"
                        android:layout_toEndOf="@id/imageView2"
                        android:text="@string/app_name"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/admin_panel"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_upload"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginStart="2dp"
                        android:drawableStart="@drawable/ic_upload_outline"
                        android:gravity="start|center"
                        android:text="@string/upload"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn_firebase"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginStart="2dp"
                        android:drawableStart="@drawable/ic_lock"
                        android:gravity="start|center"
                        android:text="@string/launch_firebase"
                        android:textAllCaps="false" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/app_name"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_downloaded"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginStart="2dp"
                        android:drawableStart="@drawable/ic_download"
                        android:gravity="start|center"
                        android:text="@string/downloads"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn_history"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginStart="2dp"
                        android:drawableStart="@drawable/ic_history"
                        android:gravity="start|center"
                        android:text="@string/history"
                        android:textAllCaps="false" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_idk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:gravity="start|center"
                        android:text="@string/app"
                        android:textAllCaps="false"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_info"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginStart="2dp"
                        android:drawableStart="@drawable/ic_information_outline"
                        android:gravity="start|center"
                        android:text="@string/about"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn_settings"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginStart="2dp"
                        android:drawableStart="@drawable/ic_settings_outline"
                        android:gravity="start|center"
                        android:text="@string/settings"
                        android:textAllCaps="false" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>